finaly the image is as it should be

--- a/static/css/Users/usersBase.css
+++ b/static/css/Users/usersBase.css
@@ -6,8 +6,8 @@
 }
 
 #logo-nutri-connect {
-    display: block;
-    width: 100%;
+    padding: 0px;
+    margin-left: -5%;
 }
 
 #fundo-background {
