--- a/templates/usersBase.html
+++ b/templates/usersBase.html
@@ -9,7 +9,7 @@
 <main class="container-fluid">
     <div class="row">
         <div class="col-md-4 sidebar">
-            <!-- <img id="logo-nutri-connect" src="{% static 'img/fundo-nutri-lab.png' %}" alt="fundo-nutri-connect"> -->
+            <img id="logo-nutri-connect" class="h-100" src="{% static 'img/fundo_background_nutri_connect.png' %}" alt="fundo-nutri-connect">
         </div>
         <div class="col-md-8">
             {% block 'content' %}{% endblock %}
