--- a/static/css/Users/usersBase.css
+++ b/static/css/Users/usersBase.css
@@ -15,6 +15,17 @@
     width: 100%;
 }
 
+#subtitle {
+    color: gray;
+    font: normal 1rem var(--font-primary);
+}
+
+.information-area {
+    margin-top: 3%;
+    margin-left: 8%;
+    padding-right: 4%;
+}
+
 .users-label {
     font-family: var(--font-primary);
 }
@@ -32,9 +43,11 @@
     background-color: var(--green-color);
 }
 
+
 #footer-text {
-    font: bold 1rem var(--font-primary), sans-serif;
+    font: bold 1rem var(--font-primary), sans-serif !important;
 }
+
 
 #footer-link {
     background-color: white;
