--- a/static/css/root.css
+++ b/static/css/root.css
@@ -1,16 +1,18 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-
+@import url('https://fonts.cdnfonts.com/css/jsmath-cmti10');
+                
 
 :root {
     /* Colors */
     --green-color: #27db8f;
-    --dark-green: #678F7E;
-    --light-green: #47FFB3;
+    --dark-green: #1A8F5E;
+    --darker-green: #146D48;
 
 
     /* Fonts */
     --font-primary: 'Inter', sans-serif;
+    --font-logo: 'jsMath-cmti10', sans-serif;
 }
 
 * {
