--- a/static/css/home/home_base.css
+++ b/static/css/home/home_base.css
@@ -20,6 +20,8 @@ a.card-link {
 
 a.card-link:hover .card-lateral {
     background-color: var(--darker-green);
+    width: 16rem;
+    height: 8rem;
 }
 
 .card-lateral {
