--- a/templates/home_base.html
+++ b/templates/home_base.html
@@ -7,7 +7,7 @@
 
 {% block 'base' %}
 <header>
-    <nav class="navbar mb-2">
+    <nav class="navbar mb-4">
         <div class="container">
             <h1 id="logo" class="navbar-brand" href="#">NUTRI <span id="logo-span">LAB</span></h1>
         </div>
@@ -19,7 +19,7 @@
         <aside class="col-md-3">
             <!-- Lateral content here! -->
             <a href="#" class="card-link">
-                <div class="card mx-auto p-3 my-3 card-lateral text-center">
+                <div class="card mx-auto p-3 mb-3 card-lateral text-center">
                     <img class="mx-auto mb-2" src="{% static 'img/paciente.png' %}" alt="">
                     <h2>Gerenciar Clientes</h2>
                 </div>
